--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<DOCTYPE html>
+<html>
+<head><script src='https://www.google.com/recaptcha/api.js'></script>
+	</head><body>
 <script language="javascript">
 <!--//
 /*This Script allows people to enter by using a form that asks for a
@@ -17,7 +21,7 @@ alert("Invalid Pin")
 </script>
 
 <center>
-<table bgcolor="white" cellpadding="12" border="1" style="border: 0px dashed #FF0000">
+<form><table bgcolor="white" cellpadding="12" border="1" style="border: 0px dashed #FF0000">
 <tr><td colspan="2" bordercolor="#FFFF00" style="border: 1px solid #FF0000"><center><h1><i><b>
 	<font size="3">Login
 Area</font></b></i></h1></center></td></tr>
@@ -33,3 +37,5 @@ type="password"></td></tr>
 onClick="pasuser(this.form)"></center></td>
 	<td bordercolor="#FFFF00" style="border: 1px solid #FF0000" height="51"><center><input
 type="Reset"></form></td></tr></table></center>
+	<div class="g-recaptcha" data-sitekey="6Lfe6YwUAAAAAGX1d4l9w67WPTNwkU56eU2F0Iv_"></div></form></body>
+	</html>
