--- a/index.html
+++ b/index.html
@@ -36,6 +36,20 @@ type="password"></td></tr>
 <tr><td bordercolor="#FFFF00" style="border: 1px solid #FF0000" height="51"><center><input type="button" value="Login"
 onClick="pasuser(this.form)"></center></td>
 	<td bordercolor="#FFFF00" style="border: 1px solid #FF0000" height="51"><center><input
-type="Reset"></form></td></tr></table></center>
-	<div class="g-recaptcha" data-sitekey="6Lfe6YwUAAAAAGX1d4l9w67WPTNwkU56eU2F0Iv_"></div></form></body>
-	</html>
+type="Reset"></form></td></tr></table>
+	<div class="g-recaptcha" data-sitekey="6Lfe6YwUAAAAAGX1d4l9w67WPTNwkU56eU2F0Iv_"></div></form>
+	  <script type="text/javascript"
+     src="http://api.solvemedia.com/papi/challenge.script?k=ffZKKU3RDitPzX0VXDi8VBQGsA6Hm0s3">
+  </script>
+
+  <noscript>
+     <iframe src="http://api.solvemedia.com/papi/challenge.noscript?k=ffZKKU3RDitPzX0VXDi8VBQGsA6Hm0s3"
+  	 height="300" width="500" frameborder="0"></iframe><br/>
+     <textarea name="adcopy_challenge" rows="3" cols="40">
+     </textarea>
+     <input type="hidden" name="adcopy_response"
+  	 value="manual_challenge"/>
+  </noscript>
+
+    </body>
+	</center></html>
